[tool.poetry]
name = "dag-execution-engine"
version = "0.1.0"
description = "A Python DAG execution engine with pluggable rule and executor engines."
authors = ["Piotr Pestka <pp@neatnet.tech>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
click = "^8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"